start trip + firebase + login & sign up refactoring

--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -49,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:editable="false"
         android:ems="10"
         android:hint="Start point"
         android:inputType="textPersonName"
