--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -20,11 +21,12 @@
         android:id="@+id/txt_log_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
         android:layout_below="@id/app_logo"
         android:layout_centerInParent="true"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:text="@string/login"
+        android:visibility="invisible" />
 
     <EditText
         android:id="@+id/edit_txt_email"
@@ -33,6 +35,7 @@
         android:layout_below="@id/txt_log_in"
         android:layout_centerInParent="true"
         android:layout_marginBottom="10dp"
+        android:autofillHints=""
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
@@ -40,7 +43,6 @@
         android:hint="@string/email_address"
         android:inputType="textEmailAddress"
         android:paddingStart="5dp"
-        android:autofillHints=""
         tools:ignore="RtlSymmetry" />
 
     <EditText
@@ -50,6 +52,8 @@
         android:layout_below="@id/edit_txt_email"
         android:layout_centerInParent="true"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="10dp"
+        android:autofillHints=""
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_password"
         android:drawablePadding="12dp"
@@ -57,43 +61,44 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:paddingStart="5dp"
-        android:layout_marginBottom="10dp"
-        android:autofillHints=""
         tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/txt_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:clickable="true"
-        android:text="@string/sign_up"
         android:layout_below="@id/edit_txt_password"
         android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
         android:focusable="true"
-        android:layout_marginBottom="10dp"/>
+        android:text="Don't have an account? Sign Up"
+        android:textColor="@color/dark_blue" />
 
     <TextView
         android:id="@+id/txt_forgetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="136dp"
-        android:clickable="true"
-        android:text="@string/forget_password"
         android:layout_below="@id/txt_signup"
         android:layout_centerInParent="true"
-        android:focusable="true" />
+        android:layout_marginEnd="136dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/forget_password"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/log_in"
         android:layout_below="@id/txt_forgetPassword"
         android:layout_centerInParent="true"
-        android:paddingEnd="50dp"
+        android:layout_marginTop="30dp"
         android:paddingStart="50dp"
-        android:layout_marginTop="30dp"/>
+        android:paddingEnd="50dp"
+        android:text="@string/log_in" />
 
 
 </RelativeLayout>
