--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray_500">#9E9E9E</color>
     <color name="dark_blue">#0B1950</color>
     <color name="new_blue">#3747A0</color>
+    <color name="text_color">#141313</color>
 </resources>
