--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -54,7 +54,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:text="&#8942;"
         android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="#131313"
+        android:textColor="#0D0C0C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -64,6 +64,7 @@
         android:layout_height="33dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/txtViewDate"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,6 +73,7 @@
         android:layout_width="43dp"
         android:layout_height="33dp"
         android:text="@string/textViewTime"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtViewDate"
         app:layout_constraintTop_toTopOf="parent" />
@@ -83,6 +85,7 @@
         android:clickable="true"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/txtTripName"
+        android:textColor="@color/text_color"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewDate" />
@@ -95,6 +98,7 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="@string/txtTripType"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toEndOf="@+id/txtTripName"
         app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
 
@@ -104,6 +108,7 @@
         android:layout_height="33dp"
         android:layout_marginStart="20dp"
         android:text="@string/txtStartPoint"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toEndOf="@+id/imgArrow"
         app:layout_constraintTop_toBottomOf="@+id/txtTripName" />
 
@@ -114,6 +119,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="4dp"
         android:text="@string/txtEndPoint"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toEndOf="@+id/imgArrow"
         app:layout_constraintTop_toBottomOf="@+id/txtStartPoint" />
 
