--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,147 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:facebook="http://schemas.android.com/apk/res-auto"
-
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/txt_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
-        android:textColor="@color/purple_900" />
+    <RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".LoginActivity">
 
-
-    <EditText
-        android:id="@+id/edit_txt_name"
-        android:layout_width="250dp"
-        android:layout_height="61dp"
-        android:layout_below="@id/txt_login"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_person"
-        android:drawablePadding="12dp"
-        android:ems="10"
-        android:hint="@string/username"
-        android:inputType="textEmailAddress"
-        android:paddingStart="5dp"
-        tools:ignore="RtlSymmetry"
-        android:autofillHints="" />
-
-
-    <EditText
-        android:id="@+id/edit_txt_email"
-        android:layout_width="250dp"
-        android:layout_height="61dp"
-        android:layout_below="@id/edit_txt_name"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="12dp"
-        android:ems="10"
-        android:hint="@string/email_address"
-        android:inputType="textEmailAddress"
-        android:paddingStart="5dp"
-        android:autofillHints=""
-        tools:ignore="RtlSymmetry" />
-
-    <EditText
-        android:id="@+id/edit_txt_password"
-        android:layout_width="250dp"
-        android:layout_height="62dp"
-        android:layout_below="@id/edit_txt_email"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_password"
-        android:drawablePadding="12dp"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:paddingStart="5dp"
-        android:layout_marginBottom="20dp"
-        android:autofillHints=""
-        tools:ignore="RtlSymmetry" />
-
-    <TextView
-        android:id="@+id/txt_login_click"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edit_txt_password"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="50dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="Already Registered?  login"
-        android:textColor="@color/dark_blue" />
-
-    <Button
-        android:id="@+id/btn_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up"
-        android:layout_below="@id/txt_login_click"
-        android:layout_centerInParent="true"
-        android:paddingEnd="50dp"
-        android:paddingStart="50dp"
-        android:layout_marginBottom="40dp"/>
-
-    <Button
-        android:id="@+id/btn_google"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/google"
-        android:layout_below="@id/btn_sign_up"
-        android:layout_centerInParent="true" />
-
-
-
-    <FrameLayout
-        android:id="@+id/FrameLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_sign_up"
-        android:layout_toEndOf="@id/btn_google">
-
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/btn_facebook_login"
+        <TextView
+            android:id="@+id/txt_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+            android:textColor="@color/purple_900" />
+
+
+        <EditText
+            android:id="@+id/edit_txt_name"
+            android:layout_width="250dp"
+            android:layout_height="61dp"
+            android:layout_below="@id/txt_login"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/custom_input"
+            android:drawableStart="@drawable/ic_person"
+            android:drawablePadding="12dp"
+            android:ems="10"
+            android:hint="@string/username"
+            android:inputType="textEmailAddress"
+            android:paddingStart="5dp"
+            tools:ignore="RtlSymmetry"
+            android:autofillHints="" />
+
+
+        <EditText
+            android:id="@+id/edit_txt_email"
+            android:layout_width="250dp"
+            android:layout_height="61dp"
+            android:layout_below="@id/edit_txt_name"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/custom_input"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="12dp"
+            android:ems="10"
+            android:hint="@string/email_address"
+            android:inputType="textEmailAddress"
+            android:paddingStart="5dp"
+            android:autofillHints=""
+            tools:ignore="RtlSymmetry" />
+
+        <EditText
+            android:id="@+id/edit_txt_password"
+            android:layout_width="250dp"
+            android:layout_height="62dp"
+            android:layout_below="@id/edit_txt_email"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/custom_input"
+            android:drawableStart="@drawable/ic_password"
+            android:drawablePadding="12dp"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:paddingStart="5dp"
+            android:layout_marginBottom="20dp"
+            android:autofillHints=""
+            tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:id="@+id/txt_login_click"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edit_txt_password"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="80dp"
+            android:layout_marginBottom="50dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="Already Registered?  login"
+            android:textColor="@color/dark_blue" />
+
+        <Button
+            android:id="@+id/btn_sign_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_up"
+            android:layout_below="@id/txt_login_click"
+            android:layout_centerInParent="true"
+            android:paddingEnd="50dp"
+            android:paddingStart="50dp"
+            android:layout_marginBottom="40dp"/>
+
+        <Button
+            android:id="@+id/btn_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/google"
+            android:layout_below="@id/btn_sign_up"
+            android:layout_centerInParent="true" />
+
+
+
+        <FrameLayout
+            android:id="@+id/FrameLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_sign_up"
+            android:layout_toEndOf="@id/btn_google">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/btn_facebook_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+
+            <Button
+                android:id="@+id/btn_facebook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/facebook"
+                android:layout_below="@id/btn_sign_up"
+                android:layout_centerInParent="true"
+                android:layout_toEndOf="@id/btn_google"
+                android:layout_marginStart="5dp"/>
+        </FrameLayout>
+
+
 
 
         <Button
-            android:id="@+id/btn_facebook"
+            android:id="@+id/btn_twitter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/facebook"
+            android:text="@string/twitter"
             android:layout_below="@id/btn_sign_up"
             android:layout_centerInParent="true"
-            android:layout_toEndOf="@id/btn_google"
-            android:layout_marginStart="5dp"/>
-    </FrameLayout>
+            android:layout_toStartOf="@id/btn_google"
+            android:layout_marginEnd="5dp"/>
 
-
-
-
-    <Button
-        android:id="@+id/btn_twitter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/twitter"
-        android:layout_below="@id/btn_sign_up"
-        android:layout_centerInParent="true"
-        android:layout_toStartOf="@id/btn_google"
-        android:layout_marginEnd="5dp"/>
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
