--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="dark_blue">#0B1950</color>
     <color name="new_blue">#3747A0</color>
     <color name="text_color">#141313</color>
+    <color name="amber_color">#EAA027</color>
 </resources>
