--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -128,16 +128,84 @@
         android:layout_width="42dp"
         android:layout_height="58dp"
         android:contentDescription="@string/fromTo"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTripName"
         app:srcCompat="@drawable/arrow" />
+
+    <LinearLayout
+
+        android:id="@+id/roundHiddenLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:paddingTop="30dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/btnStartTrip"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:background="?android:attr/listDivider"
+            android:padding="20dp" />
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtDate2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:text="date" />
+
+            <TextView
+                android:id="@+id/txtTime2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:text="time" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txtStartPoint2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:text="start Point" />
+
+        <TextView
+            android:id="@+id/txtEndPoint2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:text="end point" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnStartTrip"
         android:layout_width="276dp"
         android:layout_height="48dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="4dp"
         android:contentDescription="@string/StartTrip"
         android:text="@string/btnStartTrip"
         app:backgroundTint="@color/dark_blue"
@@ -149,7 +217,7 @@
         android:layout_width="60dp"
         android:layout_height="51dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="80dp"
         android:contentDescription="@string/btnNotes"
         android:scaleType="fitXY"
         app:layout_constraintStart_toEndOf="@+id/btnStartTrip"
