--- a/app/src/main/res/layout/expanded_upcoming_card.xml
+++ b/app/src/main/res/layout/expanded_upcoming_card.xml
@@ -62,11 +62,22 @@
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/imgArrow2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/fromTo"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtTripName"
+                app:srcCompat="@drawable/arrow" />
+
             <TextView
                 android:id="@+id/txtViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:text="date"
                 android:textColor="@color/text_color"
                 android:textSize="15sp" />
@@ -75,7 +86,7 @@
                 android:id="@+id/textViewTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:text="time"
                 android:textColor="@color/text_color"
                 android:textSize="15sp" />
