--- a/app/src/main/res/layout/history_card_view.xml
+++ b/app/src/main/res/layout/history_card_view.xml
@@ -70,7 +70,7 @@
             android:paddingLeft="10dp"
             android:paddingTop="16dp"
             android:paddingRight="10dp"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -132,6 +132,7 @@
                 android:textColor="#028579"
                 android:textStyle="bold" />
 
+
             <TextView
                 android:id="@+id/txtDistance"
                 android:layout_width="match_parent"
@@ -142,7 +143,6 @@
                 android:textColor="#028579"
                 android:textStyle="bold"
                 android:visibility="visible" />
-
 
             <LinearLayout
                 android:id="@+id/roundHiddenLayout"
