--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="228dp"
+            android:layout_marginTop="196dp"
             android:ems="10"
             android:gravity="center_vertical"
             android:hint="Pick time"
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="272dp"
+            android:layout_marginTop="228dp"
             android:ems="10"
             android:gravity="center_vertical"
             android:hint="Pick date"
@@ -186,6 +186,7 @@
             android:id="@+id/repeaterSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/txtRepeaterSpinner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txtRepeaterSpinner"
@@ -208,6 +209,7 @@
             android:layout_marginTop="48dp"
             android:hint="repeat"
             android:text="@string/txtEndPoint"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timePicker" />
 
@@ -216,7 +218,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="168dp"
             android:hint="direcion"
             android:text="@string/txtDirectionSpinner"
             app:layout_constraintStart_toStartOf="parent"
